--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -575,6 +575,8 @@ on property:sys.boot_completed=1
     #Reinit lmkd to reconfigure lmkd properties
     setprop lmkd.reinit 1
 
+    write /sys/class/power_supply/usb/otg_switch 1
+
 on property:persist.vendor.radio.atfwd.start=false
     stop vendor.atfwd
 
