sdm710-common: KharaMeParts
Signed-off-by: MadhavSaladi <baaswanthmadhav@gmail.com>
Signed-off-by: KrishWalecha <Krishwalecha098@gmail.com>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -473,3 +473,15 @@ service energy-awareness /system/vendor/bin/energy-awareness
     group system
     oneshot
 
+on boot
+# Permissions for Double tap to wake
+    chown system system /proc/touchpanel/double_tap_enable
+    chmod 0660 /proc/touchpanel/double_tap_enable
+
+# Permissions for gesture enable
+    chown system system /proc/touchpanel/gesture_enable
+    chmod 0660 /proc/touchpanel/gesture_enable
+
+# Permissions for vibration controller
+    chown system system /sys/class/leds/vibrator/vmax_mv
+    chmod 0660 /sys/class/leds/vibrator/vmax_mv
