--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -163,6 +163,9 @@ on boot
     chown system system /proc/touchpanel/oppo_tp_direction
     write /proc/touchpanel/oppo_tp_limit_enable 0
     write /proc/touchpanel/oppo_tp_direction 1
+    chmod 0660 /proc/touchpanel/double_tap_enable
+    chown system system /proc/touchpanel/double_tap_enable
+    write /proc/touchpanel/double_tap_enable 1
 
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/type
