Rootdir: Disable serial console notification Google added a check for this prop in R, and if it's running it will show a notification about it that it's impacting performance. Why it's not disabled by default I don't know, so just force disable it here.

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -167,6 +167,8 @@ on boot
     chown system system /proc/touchpanel/double_tap_enable
     write /proc/touchpanel/double_tap_enable 1
 
+    setprop init.svc.console stopped
+
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/type
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/state
