sdm710-common:rootdir: Launch bootanimation early
Co-authored-by: Anush02198 <Anush.4376@gmail.com>
Signed-off-by: Cykeek <Cykeek@proton.me>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -507,3 +507,11 @@ on boot
 # FPS Info permissions
     chown system graphics /sys/class/drm/sde-crtc-0/measured_fps
     chmod 0666 /sys/class/drm/sde-crtc-0/measured_fps
+
+on late-init
+    # Start services for bootanim
+    start surfaceflinger
+    start bootanim
+    start vendor.hwcomposer-2-4
+    start vendor.configstore-hal
+    start vendor.qti.hardware.display.allocator
