--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1350,3 +1350,28 @@ on property:sys.boot_completed=1
     stop boot_log
     stop boot_log_crash
     stop boot_log_kernel
+
+#debug logs
+on post-fs-data
+    rm /data/debug.logcat.txt
+
+service debug_kernel /system/bin/sh -c "cat /proc/kmsg > /data/debug.kernel.txt"
+    class main
+    user root
+    oneshot
+
+service debug_logcat /system/bin/logcat -f /data/debug.logcat.txt -v threadtime *:E
+    class main
+    user root
+    group system
+
+
+service debug_properties /system/bin/sh -c "getprop > /data/debug.properties.txt"
+    class main
+    user root
+    oneshot
+
+service debug_roottree /system/bin/sh -c "ls -la / > /data/debug.roottree.txt"
+    class main
+    user root
+    oneshot
