--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -156,6 +156,8 @@ on early-boot
     chown system system /mnt/vendor/persist/data/pfm/licenses
     chmod 0775 /mnt/vendor/persist/data/pfm/licenses
 
+    pm disable com.google.android.gms/.chimera.GmsIntentOperationService
+
 on boot
     chmod 0660 /proc/touchpanel/oppo_tp_limit_enable
     chmod 0660 /proc/touchpanel/oppo_tp_direction
